syntax = "proto3";

package samplepb;

import "sample.proto";

option go_package = "goakt-actors-cluster/internal/samplepb;samplepb";

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc CreditAccount(CreditAccountRequest) returns (CreditAccountResponse);
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
}

message CreateAccountRequest {
  samplepb.CreateAccount create_account = 1;
}

message CreateAccountResponse {
  Account account = 1;
}

message CreditAccountRequest {
  CreditAccount credit_account = 1;
}

message CreditAccountResponse {
  Account account = 1;
}

message GetAccountRequest {
  string account_id = 1;
}

message GetAccountResponse {
  Account account = 1;
}
